# malabota

./: .prettierignore  .prettierrc.yaml  cdk.json  package-lock.json  package.json  pyproject.toml
lamdbas/core/interaction-handler/: index.py  requirements.txt
src/: malabota.ts
src/common/: app-info.ts  tags.ts
src/core/: core-stacks.ts  core.ts
src/core/interaction-handler/: interaction-handler-stack.ts
src/core/interaction-handler/api/: models.ts
src/core/secrets/: secrets-stack.ts
test/: malabota.test.ts
